--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,19 @@ layout: default
     <div class="column three-fourths">
       <div class="collection-title">
         <h1 class="collection-header">{{ page.title }}</h1>
+        {% if page.subtitle %}
+        <div class="collection-info">
+          <span class="meta-info">
+            {{ page.subtitle}}
+          </span>
+        </div>
+        {% elsif page.description %}
+        <div class="collection-info">
+          <span class="meta-info">
+            {{ page.subtitle}}
+          </span>
+        </div>
+        {% endif %}
         <div class="collection-info">
           {% if page.date %}
           <span class="meta-info">
