--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
         {% elsif page.description %}
         <div class="collection-info">
           <span class="meta-info">
-            {{ page.subtitle}}
+            {{ page.description}}
           </span>
         </div>
         {% endif %}
