--- a/_layouts/wiki.html
+++ b/_layouts/wiki.html
@@ -12,10 +12,16 @@ layout: default
     <div class="column three-fourths">
       <div class="collection-title">
         <h1 class="collection-header">{{ page.title }}</h1>
-        {% if page.description %}
+        {% if page.subtitle %}
         <div class="collection-info">
           <span class="meta-info">
-            {{ page.description }}
+            {{ page.subtitle}}
+          </span>
+        </div>
+        {% elsif page.description %}
+        <div class="collection-info">
+          <span class="meta-info">
+            {{ page.description}}
           </span>
         </div>
         {% endif %}
