--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -15,7 +15,13 @@ layout: default
             {% if page.subtitle %}
             <div class="collection-info">
               <span class="meta-info">
-                {{ page.subtitle}}
+                {{ page.subtitle }}
+              </span>
+            </div>
+            {% elsif page.description %}
+            <div class="collection-info">
+              <span class="meta-info">
+                {{ page.description }}
               </span>
             </div>
             {% endif %}
