--- a/_includes/sidebar-categories-nav.html
+++ b/_includes/sidebar-categories-nav.html
@@ -1,4 +1,4 @@
-<h3>Blog Categories</h3>
+<h3>Categories</h3>
 <div id="blog-categories">
   <ul class="list-group">
     {% assign sorted_categories = site.categories | sort %}
