--- a/_layouts/demo.html
+++ b/_layouts/demo.html
@@ -14,11 +14,16 @@ layout: default
 .site-footer .octicon-mark-github {
     top: 18px;
 }
+.demo-class{
+	margin: auto;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
 </style>
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mzlogin/kityminder-core@dev/dist/kityminder.core.css">
-
-<div id="demo"></div>
+<div class="demo-class" id="demo"></div>
 
 <article class="article-content markdown-body" style="display:none;">
 {{ content }}
